Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123588

Compiler warnings in generated code of user project

    XMLWordPrintable

Details

    • 67cc5e56e (dev), 51aa9c616 (dev), c0428aa21 (6.7), 5b1902aa3 (6.7)

    Description

      I tried Qt 6.7.0RC1 with current qml development. We get those warnings now. Qt 6.6.2 had no warnings here.

      qml/.rcc/qrc_qmake_Governikus_Type_init.cpp:12:76: warning: empty expression statement has no effect; remove unnecessary ';' to silence this warning [-Wextra-semi-stmt]
         12 |         resourceReferenceKeeper() { QT_KEEP_RESOURCE(qmake_Governikus_Type); }
            |                                                                            ^
      
      [1007/3749] Building CXX object src/ui/qml/modules/CMakeFiles/AusweisAppUiQmlModuleLinuxAnimationsplugin.dir/AusweisAppUiQmlModuleLinuxAnimationsplugin_Governikus_AnimationsPlugin.cpp.o
      /home/andre/hg/AusweisApp2-build/default/src/ui/qml/modules/AusweisAppUiQmlModuleLinuxAnimationsplugin_Governikus_AnimationsPlugin.cpp:8:56: warning: extra ';' outside of a function is incompatible with C++98 [-Wc++98-compat-extra-semi]
          8 | QT_DECLARE_EXTERN_RESOURCE(qmake_Governikus_Animations);
            |                                                        ^
      /home/andre/hg/AusweisApp2-build/default/src/ui/qml/modules/AusweisAppUiQmlModuleLinuxAnimationsplugin_Governikus_AnimationsPlugin.cpp:9:75: warning: extra ';' outside of a function is incompatible with C++98 [-Wc++98-compat-extra-semi]
          9 | QT_DECLARE_EXTERN_RESOURCE(AusweisAppUiQmlModuleLinuxAnimations_raw_qml_0);
            |                                                                           ^
      /home/andre/hg/AusweisApp2-build/default/src/ui/qml/modules/AusweisAppUiQmlModuleLinuxAnimationsplugin_Governikus_AnimationsPlugin.cpp:12:72: warning: extra ';' outside of a function is incompatible with C++98 [-Wc++98-compat-extra-semi]
         12 | QT_DECLARE_EXTERN_SYMBOL_VOID(qml_register_types_Governikus_Animations);
            |                                                                        ^
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            alexandru.croitor Alexandru Croitor
            misery André Klitzing
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes